--- a/Cargo.toml
+++ b/Cargo.toml
@@ -21,6 +21,8 @@ futures-util = "0.3.21"
 serde_cbor = "0.11.2"
 serde = "1.0.137"
 actix-http = "3.0.4"
+mime = "0.3.16"
+cfg-if = "1.0.0"
 
 [dependencies.actix-web]
 version = "4.0.1"
