--- a/Cargo.toml
+++ b/Cargo.toml
@@ -18,7 +18,7 @@ compress = ["actix-web/__compress"]
 [dependencies]
 log = "0.4.17"
 futures-util = "0.3.21"
-serde_cbor = "0.11.2"
+ciborium = "0.2.0"
 serde = "1.0.137"
 actix-http = "3.0.4"
 mime = "0.3.16"
